Included evaluation.ltx into thesis. Added numbers of test and training samples.

--- a/thesis/evaluation.ltx
+++ b/thesis/evaluation.ltx
@@ -1,2 +1,12 @@
+\citeauthor{Dellschaft2006} \cite{Dellschaft2006}
+
+\subsection{Method}
+Includes how the gold standard was generated.
+
 \subsection{About the dataset}
 Simple sentences generated $72,386,886$ edges (no relations to literals included).
+
+$100,000$ samples were randomly chosen for testing.
+All other $1,083,128$ samples are used as training data.
+
+\subsection{Results}
