--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -60,10 +60,7 @@
 \newpage
 
 \section{Evaluation}\label{section:evaluation}
-\subsection{Method}
-\citeauthor{Dellschaft2006} \cite{Dellschaft2006}
-\subsection{Generation of gold standard}
-\subsection{Results}
+\import{./}{evaluation.ltx}
 \newpage
 
 \section{Conclusion and future work}\label{section:conclusion}
