Corrected the number of test samples in Section "Evaluation".

--- a/thesis/evaluation.ltx
+++ b/thesis/evaluation.ltx
@@ -4,9 +4,9 @@
 Includes how the gold standard was generated.
 
 \subsection{About the dataset}
-Simple sentences generated $72,386,886$ edges (no relations to literals included).
+Simple sentences generated $72,386,886$ sentences.
 
-$100,000$ samples were randomly chosen for testing.
-All other $1,083,128$ samples are used as training data.
+test samples: $200,000$.
+training samples: $1,083,128$.
 
 \subsection{Results}
