--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -644,3 +644,26 @@ day={7},
 howpublished={https://dumps.wikimedia.org/wikidatawiki/entities/},
 note={Accessed: 2016-11-20}
 }
+% gensim
+@inproceedings{Rehurek2010,
+      title = {{Software Framework for Topic Modelling with Large Corpora}},
+      author = {Radim {\v R}eh{\r u}{\v r}ek and Petr Sojka},
+      booktitle = {{Proceedings of the LREC 2010 Workshop on New
+           Challenges for NLP Frameworks}},
+      pages = {45--50},
+      year = 2010,
+      month = May,
+      day = 22,
+      publisher = {ELRA},
+      address = {Valletta, Malta},
+      note={\url{http://is.muni.cz/publication/884893/en}},
+      language={English}
+}
+% scipy
+@Misc{Jones2001,
+  author =    {Eric Jones and Travis Oliphant and Pearu Peterson and others},
+  title =     {{SciPy}: Open source scientific tools for {Python}},
+  year =      {2001--},
+  url = "http://www.scipy.org/",
+  note = {[Online; accessed 2017-03-16]}
+}
