Started writing Chapter "Evaluation".

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -587,6 +587,20 @@ year = {2001}
  publisher = {Springer-Verlag},
  address = {Berlin, Heidelberg},
 }
+% evaluation of hierarchical classification
+@article{Kosmopoulos2014,
+  author    = {Aris Kosmopoulos and
+               Ioannis Partalas and
+               {\'E}ric Gaussier and
+               Georgios Paliouras and
+               Ion Androutsopoulos},
+  title     = {Evaluation Measures for Hierarchical Classification: a unified
+               view and novel approaches},
+  journal   = {Data Mining and Knowledge Discovery, Springer (accepted for publication)},
+  year      = {2014},
+  url        = {http://arxiv.org/abs/1306.6802},
+month={june}
+}
 % about n-grams
 @incollection{Jurafsky2014,
 author = {Jurafsky, Daniel and Martin, James H.},
