--- a/thesis/appendix_graphs.ltx
+++ b/thesis/appendix_graphs.ltx
@@ -1,43 +1,37 @@
 \begin{definition}[Directed graph]\label{directed graph}
-	A \textnormal{directed graph} G is an ordered pair $G=(V, E)$, where $V$ is a set of vertices, and $E = \{ (v_1, v_2) \mid v_1, v_2 \in V \}$ 
-	is a set of ordered pairs called directed edges, connecting the the vertices.
+A \textbf{directed graph} G is an ordered pair $G=(V, E)$, where $V$ is a set of vertices, and $E = \{ (v_1, v_2) \mid v_1, v_2 \in V \}$ 
+is a set of ordered pairs called directed edges, connecting the the vertices.
 \end{definition}
-\begin{definition}{Subgraph}
-Let $G=(V, E)$ and $H=(W, F)$ be directed graphs. $H$ is called \textnormal{subgraph} of $G$, if $W \subseteq V$ and $F \subseteq E$.
+\begin{definition}[Subgraph]
+Let $G=(V, E)$ and $H=(W, F)$ be directed graphs. $H$ is called \textbf{subgraph} of $G$, if $W \subseteq V$ and $F \subseteq E$.
 \end{definition}
 \begin{definition}[Predecessor]\label{predecessor}
 Let $G=(V, E)$ be a directed graph.
-$v_1 \in V$ is a \textnormal{predecessor} of $v_2 \in V$, if there exists an edge so that $(v_1, v_2) \in E$.
-Let $v \in V$ be a vertice of G, then $pred_G(v) = \{ w \mid (w, v) \in E \}$ is the set of predecessors of $v$.
+$v_1 \in V$ is a \textbf{predecessor} of $v_2 \in V$, if there exists an edge so that $(v_1, v_2) \in E$.
+Let $v \in V$ be a vertice of G, then $\mathit{pred}_G(v) = \{ w \mid (w, v) \in E \}$ is the set of predecessors of $v$.
 \end{definition}
 \begin{definition}[Successor]\label{successor}
-$v_1 \in V$ is a \textnormal{successor} of $v_2 \in V$, if there exists an edge so that $(v_2, v_1) \in E$.
-Let $v \in V$ be a vertice of G, then $succ_G(v) = \{ w \mid (v, w) \in E \}$ is the set of successors of $v$.
+$v_1 \in V$ is a \textbf{successor} of $v_2 \in V$, if there exists an edge so that $(v_2, v_1) \in E$.
+Let $v \in V$ be a vertice of G, then $\mathit{succ}_G(v) = \{ w \mid (v, w) \in E \}$ is the set of successors of $v$.
 \end{definition}
 \begin{definition}[Walk]\label{walk}
 Let $G = (V, E)$ be a directed graph.
-A \textnormal{walk} $W$ of length $n \in \mathbb{N}$ is a sequence of vertices $W=(v_1,\ldots, v_n)$ with $v_1,\ldots, 
+A \textbf{walk} $W$ of length $n \in \mathbb{N}$ is a sequence of vertices $W=(v_1,\ldots, v_n)$ with $v_1,\ldots, 
 v_n \in V$,  so that $(v_i, v_{i+1}) \in E \; \forall i=1,\ldots,n-1$.
 \end{definition}
 \begin{definition}[Connected (Vertice)]
-Let $G=(V, E)$ be a directed graph. Vertices $u,v \in V$ are \textnormal{connected}, if $u = v$, or $u \neq v$ and there is walk between $u$ and $v$ or $v$ and $u$.
+Let $G=(V, E)$ be a directed graph. Vertices $u,v \in V$ are \textbf{connected}, if $u = v$, or $u \neq v$ and there is walk between $u$ and $v$ or $v$ and $u$.
 \end{definition}
 \begin{definition}[Connected (Directed graph)]
-Let $G$ be a directed graph. $G$ is \textnormal{connected}, if every pair of vertices in $G$ are connected.
-\end{definition}
-\textbf{TODO: the current definition of component is useless.}
-\begin{definition}[Component]
-Let $G$ and $H$ be directed graphs. $H$ is a \textnormal{component} of $G$, if $H$ is a connected subgraph of $G$ and $H$ is not subgraph of another connected subgraph of $G$,
-which has more vertices or edges than $H$.
+Let $G$ be a directed graph. $G$ is \textbf{connected}, if every pair of vertices in $G$ are connected.
 \end{definition}
 \begin{definition}[Cycle]\label{cycle}
-A walk $W=(v_1,\ldots, v_n)$ of length $n$ is called a \textnormal{cycle}, if $v_1 = v_n$.
+A walk $W=(v_1,\ldots, v_n)$ of length $n$ is called a \textbf{cycle}, if $v_1 = v_n$.
 \end{definition}
 \begin{definition}[Directed acyclic graph]\label{acyclic directed graph}
-A directed graph $G$ is called \textnormal{directed acyclic graph}, if there are no cycles in $G$.
+A directed graph $G$ is called \textbf{directed acyclic graph}, if there are no cycles in $G$.
 \end{definition}
-\textbf{TODO: definitions}
-\begin{definition}[Weighted graph]
-\end{definition}
-\begin{definition}[Graph walk]
+\begin{definition}[Directed weighted graph]
+A \textbf{directed weighted graph} G is an ordered pair $G=(V, E)$, where $V$ is a set of vertices, and $E = \{ (v_1, v_2, e_{v_1 v_2}) \mid v_1, v_2 \in V \}$,
+where $e_{v_1 v_2}$ is the edge weight between the vertices $v_1$ and $v_2$.
 \end{definition}
